--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BUSINESS UNDERSTANDING\n",
+    "\n",
+    "# Overview\n",
+    "\n",
+    "Road accidents are a common occurrence in our daily lives, and it is likely that you or someone you know has been involved in one, hopefully without severe consequences. The ultimate goal is to reduce the number of road accidents. We will work with the Chicago Car Crash dataset to identify trends and predict the major causes of road accidents. By analyzing this data, we aim to develop strategies to reduce the frequency and severity of road accidents.\n",
+    "\n",
+    "# Business Problem \n",
+    "\n",
+    "For this project our stakeholders are NHTSA (National Highway Traffic Safety Administration) which is the governing body in the United States of America that deals with road safety. Our objectives for our stakeholders is to explain to them:\n",
+    "    1. Predict the major cause of road accidents in Chicago\n",
+    "    2. Identify the common trends of road accidents\n",
+    "    3. Analyze the Temporal Distribution of Accidents, identify peak times and days of the week when accidents are most likely to occur.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DATA UNDERSTANDING\n",
+    "\n",
+    "For this project the dataset we will be using is the Chicago Car Crashes Dataset. This data set includes two csv files, Traffic Crashes - People and Traffic Crashes - Vehicles"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
