--- a/Project.ipynb
+++ b/Project.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BUSINESS UNDERSTANDING\n",
+    "# BUSINESS UNDERSTANDING\n",
     "\n",
-    "# Overview\n",
+    "## Overview\n",
     "\n",
     "Road accidents are a common occurrence in our daily lives, and it is likely that you or someone you know has been involved in one, hopefully without severe consequences. The ultimate goal is to reduce the number of road accidents. We will work with the Chicago Car Crash dataset to identify trends and predict the major causes of road accidents. By analyzing this data, we aim to develop strategies to reduce the frequency and severity of road accidents.\n",
     "\n",
-    "# Business Problem \n",
+    "## Business Problem \n",
     "\n",
     "For this project our stakeholders are NHTSA (National Highway Traffic Safety Administration) which is the governing body in the United States of America that deals with road safety. Our objectives for our stakeholders is to explain to them:\n",
     "    1. Predict the major cause of road accidents in Chicago\n",
@@ -582,6 +582,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Df1 column names and meaning\n",
+    "PERSON_ID: A unique identifier for each person record. IDs starting with 'P' indicate passengers, while IDs starting with 'O' indicate non-passengers (e.g., drivers, pedestrians, cyclists).\n",
+    "\n",
+    "PERSON_TYPE: Type of roadway user involved in the crash.\n",
+    "\n",
+    "CRASH_RECORD_ID: An identifier that links to the same crash in the Crashes and Vehicles datasets. Also serves as a unique ID in the Crashes dataset.\n",
+    "\n",
+    "VEHICLE_ID: Corresponding CRASH_UNIT_ID from the Vehicles dataset.\n",
+    "\n",
+    "CRASH_DATE: Date and time of the crash as entered by the reporting officer.\n",
+    "\n",
+    "SEAT_NO: Code indicating the seating position of motor vehicle occupants.\n",
+    "\n",
+    "CITY: City of residence of the person involved in the crash.\n",
+    "\n",
+    "STATE: State of residence of the person involved in the crash.\n",
+    "\n",
+    "ZIPCODE: ZIP Code of residence of the person involved in the crash.\n",
+    "\n",
+    "SEX: Gender of the person involved in the crash, as determined by the reporting officer.\n",
+    "\n",
+    "AGE: Age of the person involved in the crash.\n",
+    "\n",
+    "DRIVERS_LICENSE_STATE: State issuing the driver's license of the person involved in the crash.\n",
+    "\n",
+    "DRIVERS_LICENSE_CLASS: Class of driver's license of the person involved in the crash.\n",
+    "\n",
+    "SAFETY_EQUIPMENT: Safety equipment used by the vehicle occupant in the crash, if any.\n",
+    "\n",
+    "AIRBAG_DEPLOYED: Whether the vehicle occupant airbag deployed as a result of the crash.\n",
+    "\n",
+    "EJECTION: Whether the vehicle occupant was ejected or extricated from the vehicle as a result of the crash.\n",
+    "\n",
+    "INJURY_CLASSIFICATION: Severity of injury sustained by the person in the crash.\n",
+    "\n",
+    "HOSPITAL: Hospital to which the injured person was taken.\n",
+    "\n",
+    "EMS_AGENCY: EMS agency that transported the injured person to the hospital.\n",
+    "\n",
+    "EMS_RUN_NO: EMS agency run number.\n",
+    "\n",
+    "DRIVER_ACTION: Driver action that contributed to the crash, as determined by the reporting officer.\n",
+    "\n",
+    "DRIVER_VISION: Objects that obscured the driver’s vision at the time of the crash.\n",
+    "\n",
+    "PHYSICAL_CONDITION: Driver’s apparent physical condition at the time of the crash, as observed by the reporting officer.\n",
+    "\n",
+    "PEDPEDAL_ACTION: Action of pedestrian or cyclist at the time of the crash.\n",
+    "\n",
+    "PEDPEDAL_VISIBILITY: Visibility of pedestrian or cyclist safety equipment in use at the time of the crash.\n",
+    "\n",
+    "PEDPEDAL_LOCATION: Location of pedestrian or cyclist at the time of the crash.\n",
+    "\n",
+    "BAC_RESULT: Status of blood alcohol concentration testing for the driver or other person involved in the crash.\n",
+    "\n",
+    "BAC_RESULT_VALUE: Driver’s blood alcohol concentration test result.\n",
+    "\n",
+    "CELL_PHONE_USE: Whether the person was using a cellphone at the time of the crash, as determined by the reporting officer."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -685,6 +749,164 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DF 2 Column names and Meanings\n",
+    "CRASH_UNIT_ID: A unique identifier for each vehicle record.\n",
+    "\n",
+    "CRASH_RECORD_ID: An identifier that links to the same crash in the Crashes and People datasets. Also serves as a unique ID in the Crashes dataset.\n",
+    "\n",
+    "CRASH_DATE: Date and time of the crash as entered by the reporting officer.\n",
+    "\n",
+    "UNIT_NO: A unique ID for each unit within a specific crash report.\n",
+    "\n",
+    "UNIT_TYPE: The type of unit.\n",
+    "\n",
+    "NUM_PASSENGERS: Number of passengers in the vehicle. Excluding the driver.\n",
+    "\n",
+    "VEHICLE_ID: A unique identifier for each vehicle.\n",
+    "\n",
+    "CMRC_VEH_I:\n",
+    "\n",
+    "MAKE: The make (brand) of the vehicle, if relevant.\n",
+    "\n",
+    "MODEL: The model of the vehicle, if relevant.\n",
+    "\n",
+    "LIC_PLATE_STATE: The state issuing the license plate of the vehicle, if relevant.\n",
+    "\n",
+    "VEHICLE_YEAR: The model year of the vehicle, if relevant.\n",
+    "\n",
+    "VEHICLE_DEFECT:\n",
+    "\n",
+    "VEHICLE_TYPE: The type of vehicle, if relevant.\n",
+    "\n",
+    "VEHICLE_USE: The normal use of the vehicle, if relevant.\n",
+    "\n",
+    "TRAVEL_DIRECTION: The direction in which the unit was traveling prior to the crash, as determined by the reporting officer.\n",
+    "\n",
+    "MANEUVER: The action the unit was taking prior to the crash, as determined by the reporting officer.\n",
+    "\n",
+    "TOWED_I: Indicator of whether the vehicle was towed.\n",
+    "\n",
+    "FIRE_I:\n",
+    "\n",
+    "OCCUPANT_CNT: The number of people in the unit, as determined by the reporting officer.\n",
+    "\n",
+    "EXCEED_SPEED_LIMIT_I: Indicator of whether the unit was speeding, as determined by the reporting officer.\n",
+    "\n",
+    "TOWED_BY: Entity that towed the unit, if relevant.\n",
+    "\n",
+    "TOWED_TO: Location to which the unit was towed, if relevant.\n",
+    "\n",
+    "AREA_00_I:\n",
+    "\n",
+    "AREA_01_I:\n",
+    "\n",
+    "AREA_02_I:\n",
+    "\n",
+    "AREA_03_I:\n",
+    "\n",
+    "AREA_04_I:\n",
+    "\n",
+    "AREA_05_I:\n",
+    "\n",
+    "AREA_06_I:\n",
+    "\n",
+    "AREA_07_I:\n",
+    "\n",
+    "AREA_08_I:\n",
+    "\n",
+    "AREA_09_I:\n",
+    "\n",
+    "AREA_10_I:\n",
+    "\n",
+    "AREA_11_I:\n",
+    "\n",
+    "AREA_12_I:\n",
+    "\n",
+    "AREA_99_I:\n",
+    "\n",
+    "FIRST_CONTACT_POINT:\n",
+    "\n",
+    "CMV_ID:\n",
+    "\n",
+    "USDOT_NO:\n",
+    "\n",
+    "CCMC_NO:\n",
+    "\n",
+    "ILCC_NO:\n",
+    "\n",
+    "COMMERCIAL_SRC:\n",
+    "\n",
+    "GVWR:\n",
+    "\n",
+    "CARRIER_NAME:\n",
+    "\n",
+    "CARRIER_STATE:\n",
+    "\n",
+    "CARRIER_CITY:\n",
+    "\n",
+    "HAZMAT_PLACARDS_I:\n",
+    "\n",
+    "HAZMAT_NAME:\n",
+    "\n",
+    "UN_NO:\n",
+    "\n",
+    "HAZMAT_PRESENT_I:\n",
+    "\n",
+    "HAZMAT_REPORT_I:\n",
+    "\n",
+    "HAZMAT_REPORT_NO:\n",
+    "\n",
+    "MCS_REPORT_I:\n",
+    "\n",
+    "MCS_REPORT_NO:\n",
+    "\n",
+    "HAZMAT_VIO_CAUSE_CRASH_I:\n",
+    "\n",
+    "MCS_VIO_CAUSE_CRASH_I:\n",
+    "\n",
+    "IDOT_PERMIT_NO:\n",
+    "\n",
+    "WIDE_LOAD_I:\n",
+    "\n",
+    "TRAILER1_WIDTH:\n",
+    "\n",
+    "TRAILER2_WIDTH:\n",
+    "\n",
+    "TRAILER1_LENGTH:\n",
+    "\n",
+    "TRAILER2_LENGTH:\n",
+    "\n",
+    "TOTAL_VEHICLE_LENGTH:\n",
+    "\n",
+    "AXLE_CNT:\n",
+    "\n",
+    "VEHICLE_CONFIG:\n",
+    "\n",
+    "CARGO_BODY_TYPE:\n",
+    "\n",
+    "LOAD_TYPE:\n",
+    "\n",
+    "HAZMAT_OUT_OF_SERVICE_I:\n",
+    "\n",
+    "MCS_OUT_OF_SERVICE_I:\n",
+    "\n",
+    "HAZMAT_CLASS:\n",
+    "\n",
+    "\n",
+    "As you can see this particular dataset has a lof of columns with no meaning. What this means is that as we move along many of it's columns will need to be dropped"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Preparation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -738,12 +960,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see from above we have a lot of missing data that we have to work on. Some columns have a significant amount of missing values and it would be better to just drop them eg HOSPITAL, EMS_AGENCY, and EMS_RUN_NO have over 1.5 million missing values, so dropping is appropriate. We also have some missing values so we will also drop rows with missing values, like CRASH_RECORD_ID, PERSON_ID, and CRASH_DATE."
+    "As you can see from above we have a lot of missing data that we have to work on. Some columns have a significant amount of missing values and it would be better to just drop them so for this we will include a threshold of 50%. If a column has more than 50% of it's data missing it will be dropped. We also have some missing values so we will also drop rows with missing values, like CRASH_RECORD_ID, PERSON_ID, and CRASH_DATE."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -778,15 +1000,17 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Drop columns with too many missing values\n",
-    "cols_to_drop = ['HOSPITAL', 'EMS_AGENCY', 'EMS_RUN_NO']\n",
-    "df1.drop(columns=cols_to_drop, inplace=True)\n",
+    "missing_values = df1.isnull().sum()\n",
+    "threshold = 0.5\n",
+    "columns_to_drop = missing_values[missing_values > threshold * len(df1)].index\n",
+    "df1.drop(columns=columns_to_drop, inplace=True)\n",
     "\n",
     "# Drop rows with missing target values or critical features\n",
     "df1.dropna(subset=['CRASH_RECORD_ID', 'PERSON_ID', 'CRASH_DATE'], inplace=True)\n",
@@ -796,6 +1020,8 @@
     "\n",
     "# Impute missing values in categorical columns\n",
     "df1[df1.select_dtypes(include=['object']).columns] = SimpleImputer(strategy='most_frequent').fit_transform(df1.select_dtypes(include=['object']))\n",
+    "\n",
+    "df1.drop_duplicates(inplace=True)\n",
     "\n",
     "df1.isnull().sum()\n"
    ]
@@ -836,6 +1062,87 @@
    ],
    "source": [
     "df2.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\willi\\AppData\\Local\\Temp\\ipykernel_15984\\120631478.py:21: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df2['CRASH_DATE'] = pd.to_datetime(df2['CRASH_DATE'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CRASH_UNIT_ID           0\n",
+       "CRASH_RECORD_ID         0\n",
+       "CRASH_DATE              0\n",
+       "UNIT_NO                 0\n",
+       "UNIT_TYPE               0\n",
+       "NUM_PASSENGERS          0\n",
+       "VEHICLE_ID              0\n",
+       "MAKE                    0\n",
+       "MODEL                   0\n",
+       "LIC_PLATE_STATE         0\n",
+       "VEHICLE_YEAR            0\n",
+       "VEHICLE_DEFECT          0\n",
+       "VEHICLE_TYPE            0\n",
+       "VEHICLE_USE             0\n",
+       "TRAVEL_DIRECTION        0\n",
+       "MANEUVER                0\n",
+       "OCCUPANT_CNT            0\n",
+       "FIRST_CONTACT_POINT     0\n",
+       "CMV_ID                  0\n",
+       "TRAILER1_LENGTH         0\n",
+       "TRAILER2_LENGTH         0\n",
+       "TOTAL_VEHICLE_LENGTH    0\n",
+       "AXLE_CNT                0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Drop columns with too many missing values\n",
+    "missing_values2 = df2.isnull().sum()\n",
+    "threshold = 0.5\n",
+    "columns_to_drop = missing_values2[missing_values2 > threshold * len(df2)].index\n",
+    "df2.drop(columns=columns_to_drop, inplace=True)\n",
+    "\n",
+    "\n",
+    "# For remaining missing values, decide on imputation strategy\n",
+    "num_cols = df2.select_dtypes(include=['number']).columns\n",
+    "cat_cols = df2.select_dtypes(include=['object']).columns\n",
+    "\n",
+    "num_imputer = SimpleImputer(strategy='mean')\n",
+    "cat_imputer = SimpleImputer(strategy='most_frequent')\n",
+    "\n",
+    "# Apply imputers and drop duplicates\n",
+    "df2[num_cols] = num_imputer.fit_transform(df2[num_cols])\n",
+    "df2[cat_cols] = cat_imputer.fit_transform(df2[cat_cols])\n",
+    "df2.drop_duplicates(inplace=True)\n",
+    "\n",
+    "#Convert date columns to datetime\n",
+    "df2['CRASH_DATE'] = pd.to_datetime(df2['CRASH_DATE'])\n",
+    "\n",
+    "\n",
+    "df2.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next in order to save on time, and to make it easier to go through this file we will merge the two datasets in order to have all the information we need in one place."
    ]
   }
  ],
