--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next in order to save on time, and to make it easier to go through this file we will merge the two datasets in order to have all the information we need in one place."
+    "Next in order to save on time, and to make it easier to go through this file we will merge the two datasets in order to have all the information we need in one place. As we can see that both crash_record_id and vehicle_id exist in both datasets it is the common key that we will use to merge the datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = pd.merge(df1, df2, on=['CRASH_RECORD_ID', 'VEHICLE_ID'], how='inner')\n",
+    "merged_df.head"
    ]
   }
  ],
