--- a/Project.ipynb
+++ b/Project.ipynb
@@ -13,8 +13,11 @@
     "## Business Problem \n",
     "\n",
     "For this project our stakeholders are NHTSA (National Highway Traffic Safety Administration) which is the governing body in the United States of America that deals with road safety. Our objectives for our stakeholders is to explain to them:\n",
+    "\n",
     "    1. Predict the major cause of road accidents in Chicago\n",
+    "\n",
     "    2. Identify the common trends of road accidents\n",
+    "    \n",
     "    3. Analyze the Temporal Distribution of Accidents, identify peak times and days of the week when accidents are most likely to occur.\n",
     "\n"
    ]
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\willi\\AppData\\Local\\Temp\\ipykernel_15984\\553886820.py:2: DtypeWarning: Columns (19,23,24,25,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\willi\\AppData\\Local\\Temp\\ipykernel_28368\\553886820.py:2: DtypeWarning: Columns (19,23,24,25,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df1 = pd.read_csv(\"C:\\\\Users\\\\willi\\\\OneDrive\\\\Documents\\\\GitHub\\\\DSC-Phase-3-project\\\\Traffic_Crashes_-_People_20240603.csv\")\n",
-      "C:\\Users\\willi\\AppData\\Local\\Temp\\ipykernel_15984\\553886820.py:3: DtypeWarning: Columns (20,39,40,41,43,47,48,49,52,54,57,58,59,60,67,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\willi\\AppData\\Local\\Temp\\ipykernel_28368\\553886820.py:3: DtypeWarning: Columns (20,39,40,41,43,47,48,49,52,54,57,58,59,60,67,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df2 = pd.read_csv(\"C:\\\\Users\\\\willi\\\\OneDrive\\\\Documents\\\\GitHub\\\\DSC-Phase-3-project\\\\Traffic_Crashes_-_Vehicles_20240603.csv\")\n"
      ]
     }
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +291,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +514,7 @@
        "[5 rows x 71 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +949,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -976,14 +979,12 @@
        "CRASH_RECORD_ID          0\n",
        "VEHICLE_ID               0\n",
        "CRASH_DATE               0\n",
-       "SEAT_NO                  0\n",
        "CITY                     0\n",
        "STATE                    0\n",
        "ZIPCODE                  0\n",
        "SEX                      0\n",
        "AGE                      0\n",
        "DRIVERS_LICENSE_STATE    0\n",
-       "DRIVERS_LICENSE_CLASS    0\n",
        "SAFETY_EQUIPMENT         0\n",
        "AIRBAG_DEPLOYED          0\n",
        "EJECTION                 0\n",
@@ -991,16 +992,11 @@
        "DRIVER_ACTION            0\n",
        "DRIVER_VISION            0\n",
        "PHYSICAL_CONDITION       0\n",
-       "PEDPEDAL_ACTION          0\n",
-       "PEDPEDAL_VISIBILITY      0\n",
-       "PEDPEDAL_LOCATION        0\n",
        "BAC_RESULT               0\n",
-       "BAC_RESULT VALUE         0\n",
-       "CELL_PHONE_USE           0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1051,7 @@
        "Length: 71, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,47 +1062,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\willi\\AppData\\Local\\Temp\\ipykernel_15984\\120631478.py:21: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\willi\\AppData\\Local\\Temp\\ipykernel_28368\\120631478.py:21: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df2['CRASH_DATE'] = pd.to_datetime(df2['CRASH_DATE'])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "CRASH_UNIT_ID           0\n",
-       "CRASH_RECORD_ID         0\n",
-       "CRASH_DATE              0\n",
-       "UNIT_NO                 0\n",
-       "UNIT_TYPE               0\n",
-       "NUM_PASSENGERS          0\n",
-       "VEHICLE_ID              0\n",
-       "MAKE                    0\n",
-       "MODEL                   0\n",
-       "LIC_PLATE_STATE         0\n",
-       "VEHICLE_YEAR            0\n",
-       "VEHICLE_DEFECT          0\n",
-       "VEHICLE_TYPE            0\n",
-       "VEHICLE_USE             0\n",
-       "TRAVEL_DIRECTION        0\n",
-       "MANEUVER                0\n",
-       "OCCUPANT_CNT            0\n",
-       "FIRST_CONTACT_POINT     0\n",
-       "CMV_ID                  0\n",
-       "TRAILER1_LENGTH         0\n",
-       "TRAILER2_LENGTH         0\n",
-       "TOTAL_VEHICLE_LENGTH    0\n",
-       "AXLE_CNT                0\n",
+       "CRASH_UNIT_ID          0\n",
+       "CRASH_RECORD_ID        0\n",
+       "CRASH_DATE             0\n",
+       "UNIT_NO                0\n",
+       "UNIT_TYPE              0\n",
+       "VEHICLE_ID             0\n",
+       "MAKE                   0\n",
+       "MODEL                  0\n",
+       "LIC_PLATE_STATE        0\n",
+       "VEHICLE_YEAR           0\n",
+       "VEHICLE_DEFECT         0\n",
+       "VEHICLE_TYPE           0\n",
+       "VEHICLE_USE            0\n",
+       "TRAVEL_DIRECTION       0\n",
+       "MANEUVER               0\n",
+       "OCCUPANT_CNT           0\n",
+       "FIRST_CONTACT_POINT    0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,12 +1137,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PERSON_ID', 'PERSON_TYPE', 'CRASH_RECORD_ID', 'VEHICLE_ID',\n",
+       "       'CRASH_DATE_x', 'CITY', 'STATE', 'ZIPCODE', 'SEX', 'AGE',\n",
+       "       'DRIVERS_LICENSE_STATE', 'SAFETY_EQUIPMENT', 'AIRBAG_DEPLOYED',\n",
+       "       'EJECTION', 'INJURY_CLASSIFICATION', 'DRIVER_ACTION', 'DRIVER_VISION',\n",
+       "       'PHYSICAL_CONDITION', 'BAC_RESULT', 'CRASH_UNIT_ID', 'CRASH_DATE_y',\n",
+       "       'UNIT_NO', 'UNIT_TYPE', 'MAKE', 'MODEL', 'LIC_PLATE_STATE',\n",
+       "       'VEHICLE_YEAR', 'VEHICLE_DEFECT', 'VEHICLE_TYPE', 'VEHICLE_USE',\n",
+       "       'TRAVEL_DIRECTION', 'MANEUVER', 'OCCUPANT_CNT', 'FIRST_CONTACT_POINT'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "merged_df = pd.merge(df1, df2, on=['CRASH_RECORD_ID', 'VEHICLE_ID'], how='inner')\n",
-    "merged_df.head"
+    "merged_df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we need to drop unnecessary columns from this dataset, as it is the final dataset that will be used for modelling. So we will only keep the necessary columns that may help make our model more accurate. Columns like CRASH_RECORD_ID or VEHICLE_ID are not necessary when modelling. The city and state columns are also not needed because all the accidents captured in this data happened in the same region. We also have some duplicate columns that need to be dropped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PERSON_TYPE', 'SEX', 'AGE', 'DRIVERS_LICENSE_STATE',\n",
+       "       'SAFETY_EQUIPMENT', 'AIRBAG_DEPLOYED', 'EJECTION',\n",
+       "       'INJURY_CLASSIFICATION', 'DRIVER_ACTION', 'DRIVER_VISION',\n",
+       "       'PHYSICAL_CONDITION', 'BAC_RESULT', 'CRASH_UNIT_ID', 'CRASH_DATE_y',\n",
+       "       'UNIT_NO', 'UNIT_TYPE', 'MAKE', 'MODEL', 'VEHICLE_YEAR',\n",
+       "       'VEHICLE_DEFECT', 'VEHICLE_TYPE', 'VEHICLE_USE', 'TRAVEL_DIRECTION',\n",
+       "       'MANEUVER', 'OCCUPANT_CNT'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Drop unnecessary columns\n",
+    "up_merged_df = merged_df.drop(columns=['CRASH_RECORD_ID', 'VEHICLE_ID', 'CITY', 'STATE', 'FIRST_CONTACT_POINT', 'CRASH_DATE_x', 'PERSON_ID', 'ZIPCODE', 'LIC_PLATE_STATE'])\n",
+    "up_merged_df.columns"
    ]
   }
  ],
