--- a/Project.ipynb
+++ b/Project.ipynb
@@ -19,6 +19,8 @@
     "    2. Identify the common trends of road accidents\n",
     "    \n",
     "    3. Analyze the Temporal Distribution of Accidents, identify peak times and days of the week when accidents are most likely to occur.\n",
+    "\n",
+    "    \n",
     "\n"
    ]
   },
@@ -1173,31 +1175,360 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PERSON_TYPE</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>DRIVERS_LICENSE_STATE</th>\n",
+       "      <th>INJURY_CLASSIFICATION</th>\n",
+       "      <th>DRIVER_ACTION</th>\n",
+       "      <th>DRIVER_VISION</th>\n",
+       "      <th>BAC_RESULT</th>\n",
+       "      <th>CRASH_DATE_y</th>\n",
+       "      <th>MAKE</th>\n",
+       "      <th>MODEL</th>\n",
+       "      <th>VEHICLE_YEAR</th>\n",
+       "      <th>VEHICLE_DEFECT</th>\n",
+       "      <th>VEHICLE_TYPE</th>\n",
+       "      <th>VEHICLE_USE</th>\n",
+       "      <th>TRAVEL_DIRECTION</th>\n",
+       "      <th>OCCUPANT_CNT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DRIVER</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>NO INDICATION OF INJURY</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>TEST NOT OFFERED</td>\n",
+       "      <td>2019-09-28 03:30:00</td>\n",
+       "      <td>HONDA</td>\n",
+       "      <td>CIVIC</td>\n",
+       "      <td>2016.000000</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>PASSENGER</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DRIVER</td>\n",
+       "      <td>M</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>NO INDICATION OF INJURY</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>NOT OBSCURED</td>\n",
+       "      <td>TEST NOT OFFERED</td>\n",
+       "      <td>2020-04-13 22:50:00</td>\n",
+       "      <td>BUICK</td>\n",
+       "      <td>ENCORE</td>\n",
+       "      <td>2014.095993</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>PASSENGER</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>W</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DRIVER</td>\n",
+       "      <td>X</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>NO INDICATION OF INJURY</td>\n",
+       "      <td>IMPROPER BACKING</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>TEST NOT OFFERED</td>\n",
+       "      <td>2015-11-01 05:00:00</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>2014.095993</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>PASSENGER</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>E</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DRIVER</td>\n",
+       "      <td>X</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>NO INDICATION OF INJURY</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>TEST NOT OFFERED</td>\n",
+       "      <td>2015-11-01 08:00:00</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>2014.095993</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>UNKNOWN/NA</td>\n",
+       "      <td>UNKNOWN/NA</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DRIVER</td>\n",
+       "      <td>X</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>NO INDICATION OF INJURY</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>TEST NOT OFFERED</td>\n",
+       "      <td>2015-11-01 10:15:00</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>2014.095993</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>UNKNOWN/NA</td>\n",
+       "      <td>UNKNOWN/NA</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['PERSON_TYPE', 'SEX', 'AGE', 'DRIVERS_LICENSE_STATE',\n",
-       "       'SAFETY_EQUIPMENT', 'AIRBAG_DEPLOYED', 'EJECTION',\n",
-       "       'INJURY_CLASSIFICATION', 'DRIVER_ACTION', 'DRIVER_VISION',\n",
-       "       'PHYSICAL_CONDITION', 'BAC_RESULT', 'CRASH_UNIT_ID', 'CRASH_DATE_y',\n",
-       "       'UNIT_NO', 'UNIT_TYPE', 'MAKE', 'MODEL', 'VEHICLE_YEAR',\n",
-       "       'VEHICLE_DEFECT', 'VEHICLE_TYPE', 'VEHICLE_USE', 'TRAVEL_DIRECTION',\n",
-       "       'MANEUVER', 'OCCUPANT_CNT'],\n",
-       "      dtype='object')"
+       "  PERSON_TYPE SEX   AGE DRIVERS_LICENSE_STATE    INJURY_CLASSIFICATION  \\\n",
+       "0      DRIVER   M  25.0                    IL  NO INDICATION OF INJURY   \n",
+       "1      DRIVER   M  37.0                    IL  NO INDICATION OF INJURY   \n",
+       "2      DRIVER   X  35.0                    IL  NO INDICATION OF INJURY   \n",
+       "3      DRIVER   X  35.0                    IL  NO INDICATION OF INJURY   \n",
+       "4      DRIVER   X  35.0                    IL  NO INDICATION OF INJURY   \n",
+       "\n",
+       "      DRIVER_ACTION DRIVER_VISION        BAC_RESULT        CRASH_DATE_y  \\\n",
+       "0           UNKNOWN       UNKNOWN  TEST NOT OFFERED 2019-09-28 03:30:00   \n",
+       "1              NONE  NOT OBSCURED  TEST NOT OFFERED 2020-04-13 22:50:00   \n",
+       "2  IMPROPER BACKING       UNKNOWN  TEST NOT OFFERED 2015-11-01 05:00:00   \n",
+       "3           UNKNOWN       UNKNOWN  TEST NOT OFFERED 2015-11-01 08:00:00   \n",
+       "4           UNKNOWN       UNKNOWN  TEST NOT OFFERED 2015-11-01 10:15:00   \n",
+       "\n",
+       "      MAKE    MODEL  VEHICLE_YEAR VEHICLE_DEFECT VEHICLE_TYPE VEHICLE_USE  \\\n",
+       "0    HONDA    CIVIC   2016.000000        UNKNOWN    PASSENGER    PERSONAL   \n",
+       "1    BUICK   ENCORE   2014.095993           NONE    PASSENGER    PERSONAL   \n",
+       "2  UNKNOWN  UNKNOWN   2014.095993           NONE    PASSENGER    PERSONAL   \n",
+       "3  UNKNOWN  UNKNOWN   2014.095993        UNKNOWN   UNKNOWN/NA  UNKNOWN/NA   \n",
+       "4  UNKNOWN  UNKNOWN   2014.095993        UNKNOWN   UNKNOWN/NA  UNKNOWN/NA   \n",
+       "\n",
+       "  TRAVEL_DIRECTION  OCCUPANT_CNT  \n",
+       "0                N           1.0  \n",
+       "1                W           1.0  \n",
+       "2                E           1.0  \n",
+       "3          UNKNOWN           1.0  \n",
+       "4          UNKNOWN           1.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Drop unnecessary columns\n",
-    "up_merged_df = merged_df.drop(columns=['CRASH_RECORD_ID', 'VEHICLE_ID', 'CITY', 'STATE', 'FIRST_CONTACT_POINT', 'CRASH_DATE_x', 'PERSON_ID', 'ZIPCODE', 'LIC_PLATE_STATE'])\n",
-    "up_merged_df.columns"
+    "up_merged_df = merged_df.drop(columns=['CRASH_RECORD_ID', 'VEHICLE_ID', 'CITY', 'STATE', 'FIRST_CONTACT_POINT', 'CRASH_DATE_x', 'PERSON_ID', 'ZIPCODE', 'LIC_PLATE_STATE', 'UNIT_NO', 'CRASH_UNIT_ID', 'AIRBAG_DEPLOYED', 'MANEUVER', 'EJECTION', 'SAFETY_EQUIPMENT', 'PHYSICAL_CONDITION', 'UNIT_TYPE'])\n",
+    "up_merged_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### One Hot Encoding\n",
+    "\n",
+    "The next thing is to convert out categorical data into data that can be fed into machine learning algorithms. But due to the fact that we already have quite a number of columns we will need to tweak our approach to this. We will do this by:\n",
+    "Limiting the number of Categories: For each categorical variable, we keep only the most frequent categories and group the rest into an \"Other\" category.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\willi\\anaconda3\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1806476 entries, 0 to 1806475\n",
+      "Data columns (total 100 columns):\n",
+      " #   Column                                          Dtype         \n",
+      "---  ------                                          -----         \n",
+      " 0   AGE                                             float64       \n",
+      " 1   CRASH_DATE_y                                    datetime64[ns]\n",
+      " 2   VEHICLE_YEAR                                    float64       \n",
+      " 3   OCCUPANT_CNT                                    float64       \n",
+      " 4   PERSON_TYPE_NON-CONTACT VEHICLE                 float64       \n",
+      " 5   PERSON_TYPE_PASSENGER                           float64       \n",
+      " 6   SEX_M                                           float64       \n",
+      " 7   SEX_X                                           float64       \n",
+      " 8   DRIVERS_LICENSE_STATE_FL                        float64       \n",
+      " 9   DRIVERS_LICENSE_STATE_IL                        float64       \n",
+      " 10  DRIVERS_LICENSE_STATE_IN                        float64       \n",
+      " 11  DRIVERS_LICENSE_STATE_MI                        float64       \n",
+      " 12  DRIVERS_LICENSE_STATE_OH                        float64       \n",
+      " 13  DRIVERS_LICENSE_STATE_Other                     float64       \n",
+      " 14  DRIVERS_LICENSE_STATE_TX                        float64       \n",
+      " 15  DRIVERS_LICENSE_STATE_WI                        float64       \n",
+      " 16  DRIVERS_LICENSE_STATE_XX                        float64       \n",
+      " 17  INJURY_CLASSIFICATION_INCAPACITATING INJURY     float64       \n",
+      " 18  INJURY_CLASSIFICATION_NO INDICATION OF INJURY   float64       \n",
+      " 19  INJURY_CLASSIFICATION_NONINCAPACITATING INJURY  float64       \n",
+      " 20  INJURY_CLASSIFICATION_REPORTED, NOT EVIDENT     float64       \n",
+      " 21  DRIVER_ACTION_FOLLOWED TOO CLOSELY              float64       \n",
+      " 22  DRIVER_ACTION_IMPROPER BACKING                  float64       \n",
+      " 23  DRIVER_ACTION_IMPROPER LANE CHANGE              float64       \n",
+      " 24  DRIVER_ACTION_IMPROPER PASSING                  float64       \n",
+      " 25  DRIVER_ACTION_IMPROPER TURN                     float64       \n",
+      " 26  DRIVER_ACTION_NONE                              float64       \n",
+      " 27  DRIVER_ACTION_OTHER                             float64       \n",
+      " 28  DRIVER_ACTION_Other                             float64       \n",
+      " 29  DRIVER_ACTION_UNKNOWN                           float64       \n",
+      " 30  DRIVER_VISION_BUILDINGS                         float64       \n",
+      " 31  DRIVER_VISION_MOVING VEHICLES                   float64       \n",
+      " 32  DRIVER_VISION_NOT OBSCURED                      float64       \n",
+      " 33  DRIVER_VISION_OTHER                             float64       \n",
+      " 34  DRIVER_VISION_Other                             float64       \n",
+      " 35  DRIVER_VISION_PARKED VEHICLES                   float64       \n",
+      " 36  DRIVER_VISION_TREES, PLANTS                     float64       \n",
+      " 37  DRIVER_VISION_UNKNOWN                           float64       \n",
+      " 38  DRIVER_VISION_WINDSHIELD (WATER/ICE)            float64       \n",
+      " 39  BAC_RESULT_TEST PERFORMED, RESULTS UNKNOWN      float64       \n",
+      " 40  BAC_RESULT_TEST REFUSED                         float64       \n",
+      " 41  BAC_RESULT_TEST TAKEN                           float64       \n",
+      " 42  MAKE_DODGE                                      float64       \n",
+      " 43  MAKE_FORD                                       float64       \n",
+      " 44  MAKE_HONDA                                      float64       \n",
+      " 45  MAKE_HYUNDAI                                    float64       \n",
+      " 46  MAKE_JEEP                                       float64       \n",
+      " 47  MAKE_NISSAN                                     float64       \n",
+      " 48  MAKE_Other                                      float64       \n",
+      " 49  MAKE_TOYOTA                                     float64       \n",
+      " 50  MAKE_TOYOTA MOTOR COMPANY, LTD.                 float64       \n",
+      " 51  MAKE_UNKNOWN                                    float64       \n",
+      " 52  MODEL_CAMRY                                     float64       \n",
+      " 53  MODEL_CIVIC                                     float64       \n",
+      " 54  MODEL_COROLLA                                   float64       \n",
+      " 55  MODEL_EQUINOX                                   float64       \n",
+      " 56  MODEL_EXPLORER                                  float64       \n",
+      " 57  MODEL_IMPALA                                    float64       \n",
+      " 58  MODEL_OTHER (EXPLAIN IN NARRATIVE)              float64       \n",
+      " 59  MODEL_Other                                     float64       \n",
+      " 60  MODEL_ROGUE                                     float64       \n",
+      " 61  MODEL_UNKNOWN                                   float64       \n",
+      " 62  VEHICLE_DEFECT_ENGINE/MOTOR                     float64       \n",
+      " 63  VEHICLE_DEFECT_FUEL SYSTEM                      float64       \n",
+      " 64  VEHICLE_DEFECT_NONE                             float64       \n",
+      " 65  VEHICLE_DEFECT_OTHER                            float64       \n",
+      " 66  VEHICLE_DEFECT_Other                            float64       \n",
+      " 67  VEHICLE_DEFECT_STEERING                         float64       \n",
+      " 68  VEHICLE_DEFECT_SUSPENSION                       float64       \n",
+      " 69  VEHICLE_DEFECT_TIRES                            float64       \n",
+      " 70  VEHICLE_DEFECT_UNKNOWN                          float64       \n",
+      " 71  VEHICLE_DEFECT_WHEELS                           float64       \n",
+      " 72  VEHICLE_TYPE_BUS UP TO 15 PASS.                 float64       \n",
+      " 73  VEHICLE_TYPE_OTHER                              float64       \n",
+      " 74  VEHICLE_TYPE_Other                              float64       \n",
+      " 75  VEHICLE_TYPE_PASSENGER                          float64       \n",
+      " 76  VEHICLE_TYPE_PICKUP                             float64       \n",
+      " 77  VEHICLE_TYPE_SPORT UTILITY VEHICLE (SUV)        float64       \n",
+      " 78  VEHICLE_TYPE_TRACTOR W/ SEMI-TRAILER            float64       \n",
+      " 79  VEHICLE_TYPE_TRUCK - SINGLE UNIT                float64       \n",
+      " 80  VEHICLE_TYPE_UNKNOWN/NA                         float64       \n",
+      " 81  VEHICLE_TYPE_VAN/MINI-VAN                       float64       \n",
+      " 82  VEHICLE_USE_CTA                                 float64       \n",
+      " 83  VEHICLE_USE_NOT IN USE                          float64       \n",
+      " 84  VEHICLE_USE_OTHER                               float64       \n",
+      " 85  VEHICLE_USE_Other                               float64       \n",
+      " 86  VEHICLE_USE_PERSONAL                            float64       \n",
+      " 87  VEHICLE_USE_POLICE                              float64       \n",
+      " 88  VEHICLE_USE_RIDESHARE SERVICE                   float64       \n",
+      " 89  VEHICLE_USE_SCHOOL BUS                          float64       \n",
+      " 90  VEHICLE_USE_TAXI/FOR HIRE                       float64       \n",
+      " 91  VEHICLE_USE_UNKNOWN/NA                          float64       \n",
+      " 92  TRAVEL_DIRECTION_N                              float64       \n",
+      " 93  TRAVEL_DIRECTION_NE                             float64       \n",
+      " 94  TRAVEL_DIRECTION_NW                             float64       \n",
+      " 95  TRAVEL_DIRECTION_S                              float64       \n",
+      " 96  TRAVEL_DIRECTION_SE                             float64       \n",
+      " 97  TRAVEL_DIRECTION_SW                             float64       \n",
+      " 98  TRAVEL_DIRECTION_UNKNOWN                        float64       \n",
+      " 99  TRAVEL_DIRECTION_W                              float64       \n",
+      "dtypes: datetime64[ns](1), float64(99)\n",
+      "memory usage: 1.3 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a function to limit the number of categories\n",
+    "def limit_categories(series, top_n=7):\n",
+    "    top_categories = series.value_counts().nlargest(top_n).index\n",
+    "    return series.apply(lambda x: x if x in top_categories else 'Other')\n",
+    "\n",
+    "# Apply the function to relevant columns\n",
+    "categorical_columns = ['PERSON_TYPE', 'SEX', 'DRIVERS_LICENSE_STATE',\n",
+    "                       'INJURY_CLASSIFICATION', 'DRIVER_ACTION', 'DRIVER_VISION',\n",
+    "                        'BAC_RESULT', 'MAKE', \n",
+    "                       'MODEL', 'VEHICLE_DEFECT', 'VEHICLE_TYPE', 'VEHICLE_USE',\n",
+    "                       'TRAVEL_DIRECTION']\n",
+    "\n",
+    "for col in categorical_columns:\n",
+    "    up_merged_df[col] = limit_categories(up_merged_df[col], top_n=10)\n",
+    "\n",
+    "# One-hot encode the limited categorical columns\n",
+    "encoder = OneHotEncoder(drop='first', sparse=False)\n",
+    "encoded_features = encoder.fit_transform(up_merged_df[categorical_columns])\n",
+    "\n",
+    "# Convert the encoded features to a DataFrame\n",
+    "encoded_df = pd.DataFrame(encoded_features, columns=encoder.get_feature_names_out(categorical_columns))\n",
+    "\n",
+    "# Concatenate the encoded DataFrame with the original DataFrame\n",
+    "final_df = pd.concat([up_merged_df.drop(columns=categorical_columns), encoded_df], axis=1)\n",
+    "\n",
+    "# Print the shape to see the number of columns\n",
+    "final_df.info()"
    ]
   }
  ],
