--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1388,117 +1388,231 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1806476 entries, 0 to 1806475\n",
-      "Data columns (total 100 columns):\n",
-      " #   Column                                          Dtype         \n",
-      "---  ------                                          -----         \n",
-      " 0   AGE                                             float64       \n",
-      " 1   CRASH_DATE_y                                    datetime64[ns]\n",
-      " 2   VEHICLE_YEAR                                    float64       \n",
-      " 3   OCCUPANT_CNT                                    float64       \n",
-      " 4   PERSON_TYPE_NON-CONTACT VEHICLE                 float64       \n",
-      " 5   PERSON_TYPE_PASSENGER                           float64       \n",
-      " 6   SEX_M                                           float64       \n",
-      " 7   SEX_X                                           float64       \n",
-      " 8   DRIVERS_LICENSE_STATE_FL                        float64       \n",
-      " 9   DRIVERS_LICENSE_STATE_IL                        float64       \n",
-      " 10  DRIVERS_LICENSE_STATE_IN                        float64       \n",
-      " 11  DRIVERS_LICENSE_STATE_MI                        float64       \n",
-      " 12  DRIVERS_LICENSE_STATE_OH                        float64       \n",
-      " 13  DRIVERS_LICENSE_STATE_Other                     float64       \n",
-      " 14  DRIVERS_LICENSE_STATE_TX                        float64       \n",
-      " 15  DRIVERS_LICENSE_STATE_WI                        float64       \n",
-      " 16  DRIVERS_LICENSE_STATE_XX                        float64       \n",
-      " 17  INJURY_CLASSIFICATION_INCAPACITATING INJURY     float64       \n",
-      " 18  INJURY_CLASSIFICATION_NO INDICATION OF INJURY   float64       \n",
-      " 19  INJURY_CLASSIFICATION_NONINCAPACITATING INJURY  float64       \n",
-      " 20  INJURY_CLASSIFICATION_REPORTED, NOT EVIDENT     float64       \n",
-      " 21  DRIVER_ACTION_FOLLOWED TOO CLOSELY              float64       \n",
-      " 22  DRIVER_ACTION_IMPROPER BACKING                  float64       \n",
-      " 23  DRIVER_ACTION_IMPROPER LANE CHANGE              float64       \n",
-      " 24  DRIVER_ACTION_IMPROPER PASSING                  float64       \n",
-      " 25  DRIVER_ACTION_IMPROPER TURN                     float64       \n",
-      " 26  DRIVER_ACTION_NONE                              float64       \n",
-      " 27  DRIVER_ACTION_OTHER                             float64       \n",
-      " 28  DRIVER_ACTION_Other                             float64       \n",
-      " 29  DRIVER_ACTION_UNKNOWN                           float64       \n",
-      " 30  DRIVER_VISION_BUILDINGS                         float64       \n",
-      " 31  DRIVER_VISION_MOVING VEHICLES                   float64       \n",
-      " 32  DRIVER_VISION_NOT OBSCURED                      float64       \n",
-      " 33  DRIVER_VISION_OTHER                             float64       \n",
-      " 34  DRIVER_VISION_Other                             float64       \n",
-      " 35  DRIVER_VISION_PARKED VEHICLES                   float64       \n",
-      " 36  DRIVER_VISION_TREES, PLANTS                     float64       \n",
-      " 37  DRIVER_VISION_UNKNOWN                           float64       \n",
-      " 38  DRIVER_VISION_WINDSHIELD (WATER/ICE)            float64       \n",
-      " 39  BAC_RESULT_TEST PERFORMED, RESULTS UNKNOWN      float64       \n",
-      " 40  BAC_RESULT_TEST REFUSED                         float64       \n",
-      " 41  BAC_RESULT_TEST TAKEN                           float64       \n",
-      " 42  MAKE_DODGE                                      float64       \n",
-      " 43  MAKE_FORD                                       float64       \n",
-      " 44  MAKE_HONDA                                      float64       \n",
-      " 45  MAKE_HYUNDAI                                    float64       \n",
-      " 46  MAKE_JEEP                                       float64       \n",
-      " 47  MAKE_NISSAN                                     float64       \n",
-      " 48  MAKE_Other                                      float64       \n",
-      " 49  MAKE_TOYOTA                                     float64       \n",
-      " 50  MAKE_TOYOTA MOTOR COMPANY, LTD.                 float64       \n",
-      " 51  MAKE_UNKNOWN                                    float64       \n",
-      " 52  MODEL_CAMRY                                     float64       \n",
-      " 53  MODEL_CIVIC                                     float64       \n",
-      " 54  MODEL_COROLLA                                   float64       \n",
-      " 55  MODEL_EQUINOX                                   float64       \n",
-      " 56  MODEL_EXPLORER                                  float64       \n",
-      " 57  MODEL_IMPALA                                    float64       \n",
-      " 58  MODEL_OTHER (EXPLAIN IN NARRATIVE)              float64       \n",
-      " 59  MODEL_Other                                     float64       \n",
-      " 60  MODEL_ROGUE                                     float64       \n",
-      " 61  MODEL_UNKNOWN                                   float64       \n",
-      " 62  VEHICLE_DEFECT_ENGINE/MOTOR                     float64       \n",
-      " 63  VEHICLE_DEFECT_FUEL SYSTEM                      float64       \n",
-      " 64  VEHICLE_DEFECT_NONE                             float64       \n",
-      " 65  VEHICLE_DEFECT_OTHER                            float64       \n",
-      " 66  VEHICLE_DEFECT_Other                            float64       \n",
-      " 67  VEHICLE_DEFECT_STEERING                         float64       \n",
-      " 68  VEHICLE_DEFECT_SUSPENSION                       float64       \n",
-      " 69  VEHICLE_DEFECT_TIRES                            float64       \n",
-      " 70  VEHICLE_DEFECT_UNKNOWN                          float64       \n",
-      " 71  VEHICLE_DEFECT_WHEELS                           float64       \n",
-      " 72  VEHICLE_TYPE_BUS UP TO 15 PASS.                 float64       \n",
-      " 73  VEHICLE_TYPE_OTHER                              float64       \n",
-      " 74  VEHICLE_TYPE_Other                              float64       \n",
-      " 75  VEHICLE_TYPE_PASSENGER                          float64       \n",
-      " 76  VEHICLE_TYPE_PICKUP                             float64       \n",
-      " 77  VEHICLE_TYPE_SPORT UTILITY VEHICLE (SUV)        float64       \n",
-      " 78  VEHICLE_TYPE_TRACTOR W/ SEMI-TRAILER            float64       \n",
-      " 79  VEHICLE_TYPE_TRUCK - SINGLE UNIT                float64       \n",
-      " 80  VEHICLE_TYPE_UNKNOWN/NA                         float64       \n",
-      " 81  VEHICLE_TYPE_VAN/MINI-VAN                       float64       \n",
-      " 82  VEHICLE_USE_CTA                                 float64       \n",
-      " 83  VEHICLE_USE_NOT IN USE                          float64       \n",
-      " 84  VEHICLE_USE_OTHER                               float64       \n",
-      " 85  VEHICLE_USE_Other                               float64       \n",
-      " 86  VEHICLE_USE_PERSONAL                            float64       \n",
-      " 87  VEHICLE_USE_POLICE                              float64       \n",
-      " 88  VEHICLE_USE_RIDESHARE SERVICE                   float64       \n",
-      " 89  VEHICLE_USE_SCHOOL BUS                          float64       \n",
-      " 90  VEHICLE_USE_TAXI/FOR HIRE                       float64       \n",
-      " 91  VEHICLE_USE_UNKNOWN/NA                          float64       \n",
-      " 92  TRAVEL_DIRECTION_N                              float64       \n",
-      " 93  TRAVEL_DIRECTION_NE                             float64       \n",
-      " 94  TRAVEL_DIRECTION_NW                             float64       \n",
-      " 95  TRAVEL_DIRECTION_S                              float64       \n",
-      " 96  TRAVEL_DIRECTION_SE                             float64       \n",
-      " 97  TRAVEL_DIRECTION_SW                             float64       \n",
-      " 98  TRAVEL_DIRECTION_UNKNOWN                        float64       \n",
-      " 99  TRAVEL_DIRECTION_W                              float64       \n",
-      "dtypes: datetime64[ns](1), float64(99)\n",
-      "memory usage: 1.3 GB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>CRASH_DATE_y</th>\n",
+       "      <th>VEHICLE_YEAR</th>\n",
+       "      <th>OCCUPANT_CNT</th>\n",
+       "      <th>PERSON_TYPE_NON-CONTACT VEHICLE</th>\n",
+       "      <th>PERSON_TYPE_PASSENGER</th>\n",
+       "      <th>SEX_M</th>\n",
+       "      <th>SEX_X</th>\n",
+       "      <th>DRIVERS_LICENSE_STATE_FL</th>\n",
+       "      <th>DRIVERS_LICENSE_STATE_IL</th>\n",
+       "      <th>...</th>\n",
+       "      <th>VEHICLE_USE_TAXI/FOR HIRE</th>\n",
+       "      <th>VEHICLE_USE_UNKNOWN/NA</th>\n",
+       "      <th>TRAVEL_DIRECTION_N</th>\n",
+       "      <th>TRAVEL_DIRECTION_NE</th>\n",
+       "      <th>TRAVEL_DIRECTION_NW</th>\n",
+       "      <th>TRAVEL_DIRECTION_S</th>\n",
+       "      <th>TRAVEL_DIRECTION_SE</th>\n",
+       "      <th>TRAVEL_DIRECTION_SW</th>\n",
+       "      <th>TRAVEL_DIRECTION_UNKNOWN</th>\n",
+       "      <th>TRAVEL_DIRECTION_W</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>2019-09-28 03:30:00</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37.0</td>\n",
+       "      <td>2020-04-13 22:50:00</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>2015-11-01 05:00:00</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>2015-11-01 08:00:00</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>2015-11-01 10:15:00</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 95 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    AGE        CRASH_DATE_y  VEHICLE_YEAR  OCCUPANT_CNT  \\\n",
+       "0  25.0 2019-09-28 03:30:00          2016           1.0   \n",
+       "1  37.0 2020-04-13 22:50:00          2014           1.0   \n",
+       "2  35.0 2015-11-01 05:00:00          2014           1.0   \n",
+       "3  35.0 2015-11-01 08:00:00          2014           1.0   \n",
+       "4  35.0 2015-11-01 10:15:00          2014           1.0   \n",
+       "\n",
+       "   PERSON_TYPE_NON-CONTACT VEHICLE  PERSON_TYPE_PASSENGER  SEX_M  SEX_X  \\\n",
+       "0                              0.0                    0.0    1.0    0.0   \n",
+       "1                              0.0                    0.0    1.0    0.0   \n",
+       "2                              0.0                    0.0    0.0    1.0   \n",
+       "3                              0.0                    0.0    0.0    1.0   \n",
+       "4                              0.0                    0.0    0.0    1.0   \n",
+       "\n",
+       "   DRIVERS_LICENSE_STATE_FL  DRIVERS_LICENSE_STATE_IL  ...  \\\n",
+       "0                       0.0                       1.0  ...   \n",
+       "1                       0.0                       1.0  ...   \n",
+       "2                       0.0                       1.0  ...   \n",
+       "3                       0.0                       1.0  ...   \n",
+       "4                       0.0                       1.0  ...   \n",
+       "\n",
+       "   VEHICLE_USE_TAXI/FOR HIRE  VEHICLE_USE_UNKNOWN/NA  TRAVEL_DIRECTION_N  \\\n",
+       "0                        0.0                     0.0                 1.0   \n",
+       "1                        0.0                     0.0                 0.0   \n",
+       "2                        0.0                     0.0                 0.0   \n",
+       "3                        0.0                     1.0                 0.0   \n",
+       "4                        0.0                     1.0                 0.0   \n",
+       "\n",
+       "   TRAVEL_DIRECTION_NE  TRAVEL_DIRECTION_NW  TRAVEL_DIRECTION_S  \\\n",
+       "0                  0.0                  0.0                 0.0   \n",
+       "1                  0.0                  0.0                 0.0   \n",
+       "2                  0.0                  0.0                 0.0   \n",
+       "3                  0.0                  0.0                 0.0   \n",
+       "4                  0.0                  0.0                 0.0   \n",
+       "\n",
+       "   TRAVEL_DIRECTION_SE  TRAVEL_DIRECTION_SW  TRAVEL_DIRECTION_UNKNOWN  \\\n",
+       "0                  0.0                  0.0                       0.0   \n",
+       "1                  0.0                  0.0                       0.0   \n",
+       "2                  0.0                  0.0                       0.0   \n",
+       "3                  0.0                  0.0                       1.0   \n",
+       "4                  0.0                  0.0                       1.0   \n",
+       "\n",
+       "   TRAVEL_DIRECTION_W  \n",
+       "0                 0.0  \n",
+       "1                 1.0  \n",
+       "2                 0.0  \n",
+       "3                 0.0  \n",
+       "4                 0.0  \n",
+       "\n",
+       "[5 rows x 95 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1527,8 +1641,8 @@
     "# Concatenate the encoded DataFrame with the original DataFrame\n",
     "final_df = pd.concat([up_merged_df.drop(columns=categorical_columns), encoded_df], axis=1)\n",
     "\n",
-    "# Print the shape to see the number of columns\n",
-    "final_df.info()"
+    "\n",
+    "final_df.head()"
    ]
   }
  ],
