--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2289,10 +2289,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "No clusters found with sufficient samples of class CELL PHONE USE OTHER THAN TEXTING. Try lowering the cluster_balance_threshold or increasing the number of clusters."
+    "# Logistic Regression\n",
+    "logreg = LogisticRegression(random_state=42, max_iter=1000)\n",
+    "logreg.fit(X_train, y_train)\n",
+    "y_pred_logreg = logreg.predict(X_test)\n",
+    "\n",
+    "print(\"Logistic Regression:\")\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_logreg))\n",
+    "print(classification_report(y_test, y_pred_logreg))"
    ]
   }
  ],
